<resources>
    <string name="app_name">Sonila Beauty Box</string>
    <string name="app_version">1.0</string>
    <string name="app_description">From women’s haircuts to men’s haircuts, nothing is too big or small for Sonila Beauty Box At Salons By JC. I am your best bet for all kinds of hair care services in and around New York, NY. I pride myself in offering my advanced level of expertise in a wide variety of services including, haircuts, hair extensions, blowouts, hair coloring, highlights, Balayage, and more, using only top of the line hair care products.</string>
    <string name="url_web_site">http://sonilabeautybox.com/</string>
    <string name="url_app_google_play">https://play.google.com/store/apps/details?id=com.dc.beautybox</string>

    <string name="ad_uni_tid_banner">ca-app-pub-3447169368463700/2038228077</string>
    <string name="AD_MOB_ENABLED">false</string>


    <string name="app_phone">+(1) 347 924–1788</string>
    <string name="app_email">bellosonila@gmail.com</string>
    <string name="app_adress">124 W. 24TH STREET, SUITE 2, NEW YORK, NY 10011 </string>
    <string name="app_facebook">https://www.facebook.com/sonilabeautybox/</string>
    <string name="app_twitter">https://twitter.com/sonilabeautybox/</string>
    <string name="app_instagram">https://www.instagram.com/sonilabeautybox/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_contact">Contact Us</string>
    <string name="nav_aboute">About Us</string>
    <string name="nav_share">Share Application</string>
    <string name="back_message">Please click BACK again to exit</string>

</resources>
