<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.dc.beautybox.ContactActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_line_buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="45dp">
                    <ImageView
                        app:srcCompat="@drawable/ic_call"
                        android:tint="@color/colorPrimary"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="Phone:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="15sp"
                        android:onClick="Call"
                        android:text="@string/app_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_line_buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="45dp">
                    <ImageView
                        app:srcCompat="@drawable/ic_email"
                        android:tint="@color/colorPrimary"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="E-mail:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:onClick="BrowseEmail"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp"
                        android:text="@string/app_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_line_buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="45dp">
                    <ImageView
                        app:srcCompat="@drawable/ic_location"
                        android:tint="@color/colorPrimary"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="Address:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="15sp"
                        android:text="@string/app_adress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_line_buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="45dp">
                    <ImageView
                        app:srcCompat="@drawable/ic_facebook"
                        android:tint="@color/colorPrimary"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="Facebook:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp"
                        android:onClick="Browse"
                        android:text="@string/app_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_line_buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="45dp">
                    <ImageView
                        app:srcCompat="@drawable/ic_tiwtter"
                        android:tint="@color/colorPrimary"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="Twitter:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:onClick="Browse"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp"
                        android:text="@string/app_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/border_line_buttom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="45dp">

                    <ImageView
                        app:srcCompat="@drawable/ic_instagram"
                        android:tint="@color/colorPrimary"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/imageView2" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="Instagram:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:onClick="Browse"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="15sp"
                        android:text="@string/app_instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
